Fixed: login form was appearing in the middle instead of aligned at top.

--- a/apps/coopolis/static/styles/scss/coopolis.scss
+++ b/apps/coopolis/static/styles/scss/coopolis.scss
@@ -1,6 +1,7 @@
 
 .generated-form {
     align-self: flex-start;
+    justify-content: initial;
     padding-top: 30px;
 
     form {
