--- a/apps/coopolis/static/styles/stylesheet.css
+++ b/apps/coopolis/static/styles/stylesheet.css
@@ -465,6 +465,7 @@ footer p span {
 
 .generated-form {
   align-self: flex-start;
+  justify-content: initial;
   padding-top: 30px;
 }
 .generated-form form .errorlist {
